# jsengine

./: .gitignore  FIX_SUMMARY.md  LICENSE  README.md  TEST_RESULTS.md  VERIFICATION_LOG.md  direct_test.exs  minimal_test.exs  mix.exs  quick_test.exs  test_modules.exs  test_simple_load.exs
.github/workflows/: ci.yml
lib/: jsengine.ex
native/jsengine/: Cargo.toml  README.md
native/jsengine/src/: atoms.rs  conv.rs  engine.rs  lib.rs  runtime.js
test/: jsengine_test.exs
test/fixtures/modules/: calculator.js  math.js
test/fixtures/typescript/: greeter.ts
