[package]
name = "jsengine"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "jsengine"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
deno_core = "0.230.0"
tokio = { version = "1.34.0", features = ["full"] }
quick-error = "2.0.1"
once_cell = "1.18.0"
